Fix some regressions